--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,8 +13,8 @@ jobs:
     
     strategy:
       matrix:
-        platform: [ubuntu-latest,macos-latest,windows-latest]
-        python-version: ["3.8", "3.9", "3.10"]
+        platform: [ubuntu-latest]
+        python-version: ["3.7"]
     runs-on: ${{ matrix.platform }}
     steps:
     - uses: actions/checkout@v2
@@ -29,3 +29,12 @@ jobs:
     - name: Test with pytest
       run: |
         pytest test.py
+    - name: Check docker installed or not
+      run: docker run hello-world
+    - name: Push to docker Hub
+      uses: docker/build-push-action@v2.4.0
+      with: 
+        username: $({ secrets.DOCKER_USERNAME })
+        password: $({ secrets.DOCKER_PASSWORD })
+        repository: docker push rpmcustom001/devopswithpy
+        tag_with_ref: true
