--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,9 +32,9 @@ jobs:
     - name: Check docker installed or not
       run: docker run hello-world
     - name: Push to docker Hub
-      uses: docker/build-push-action@v1
+      uses: docker/build-push-action@v2
       with: 
         username: $({ secrets.DOCKER_USERNAME })
         password: $({ secrets.DOCKER_PASSWORD })
-        repository: docker push rpmcustom001/devopswithpy
+        repository: rpmcustom001/devopswithpy
         tag_with_ref: true
