--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,6 +35,6 @@ jobs:
       uses: docker/build-push-action@v2
       with: 
         username: $({ secrets.DOCKER_USERNAME })
-        password: $({ secrets.DOCKER_PASSWORD })
+        password: $({ secrets.DOCKER_TOKEN })
         repository: rpmcustom001/devopswithpy
         tag_with_ref: true
