--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,10 +31,13 @@ jobs:
         pytest test.py
     - name: Check docker installed or not
       run: docker run hello-world
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
     - name: Push to docker Hub
       uses: docker/build-push-action@v2
       with: 
-        username: $({ secrets.DOCKER_USERNAME })
-        password: $({ secrets.DOCKER_TOKEN })
         repository: rpmcustom001/devopswithpy
         tag_with_ref: true
