--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,5 +39,5 @@ jobs:
     - name: Push to docker Hub
       uses: docker/build-push-action@v2
       with: 
-        repository: rpmcustom001/devopswithpy
-        tag_with_ref: true
+        push: true
+        tags: rpmcustom001/devopswithpy:latest
