--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,7 +13,7 @@ jobs:
     
     strategy:
       matrix:
-        platform: [ubuntu-latest]
+        platform: [linux/arm64/v8]
         python-version: ["3.7"]
     runs-on: ${{ matrix.platform }}
     steps:
